# SLM_FineTuned_with_KGs

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
configs/: corpus.yaml  dpo.yaml  eval_dataset.yaml  kg_extraction.yaml  kg_schema.yaml  model.yaml  pretrain.yaml  pretrain_dataset.yaml  sft.yaml  sft_dataset.yaml
data/datasets/eval/: eval_v0.1.jsonl  eval_v0.1.manifest.json
data/datasets/preference/: preference_v0.1.jsonl  preference_v0.1.manifest.json
data/datasets/pretrain/: pretrain_b1_raw.jsonl  pretrain_b2_linearized.jsonl  pretrain_b3_verbalized.jsonl  pretrain_v0.1.jsonl  pretrain_v0.1.manifest.json  pretrain_v0.2.jsonl  pretrain_v0.2.manifest.json
data/datasets/sft/: sft_v0.1.jsonl  sft_v0.1.manifest.json
data/kg/my_kg/: call_records.jsonl  candidate_entities.jsonl  candidate_relations.jsonl
data/kg/my_kg_normalized/: entities.jsonl  relations.jsonl
data/kg/snapshots/kg_domain_v0.1/: manifest.yaml
data/processed/my_corpus/: chunks.jsonl  documents.jsonl
data/raw/documents/: knowledge_graphs.md  neural_networks.md  neuro_symbolic_integration.md
documentation/: README.md  slm-with-kgs.md
prompts/: kg_system_prompt_v0.1.txt  kg_user_prompt_v0.1.txt  kg_user_prompt_v0.2.txt
reports/: benchmark_comparison.md  eval_b0.json  eval_b1.json  eval_b2_linearized.json  eval_b3_verbalized.json  eval_b4_kg_sft.json  eval_b5_kg_dpo.json  kg_validation_v0.1.json  reward_b5.json
scripts/: benchmark_compare.py  download_checkpoint.py  evaluate_checkpoint.py  evaluate_kg_reward.py  extend_tokenizer.py  finetune_dpo.py  finetune_sft.py  prompt.py  setup_env.sh
src/cli/: main.cpp
src/core/: config.hpp  errors.hpp  hashing.hpp
src/corpus/: chunker.hpp  corpus_manifest.hpp  corpus_reader.hpp  corpus_validator.hpp  document.hpp
src/datasets/: dataset_config.hpp  dataset_manifest.hpp  eval_builder.hpp  negative_sampler.hpp  preference_builder.hpp  pretrain_builder.hpp  sft_builder.hpp
src/extraction/: extraction_cache.hpp  extraction_config.hpp  extraction_pipeline.hpp  gemini_provider.hpp  http_utils.hpp  mock_provider.hpp  openai_provider.hpp  provider_interface.hpp  replay_provider.hpp  response_parser.hpp
src/kg/: entity.hpp  graph_linearizer.hpp  graph_snapshot.hpp  graph_store.hpp  graph_validator.hpp  normalizer.hpp  relation.hpp  schema.hpp
src/prompts/: prompt_hash.hpp  prompt_manifest.hpp  prompt_renderer.hpp  prompt_template.hpp
tests/: test_corpus.cpp  test_datasets.cpp  test_extraction.cpp  test_kg.cpp  test_prompts.cpp  test_scripts.py
tests/fixtures/: mock_extraction_response.json
tests/fixtures/corpus_malformed/: malformed_docs.jsonl
tests/fixtures/corpus_valid/: fixture_docs.jsonl
tests/fixtures/golden/: linearized_triple.txt  rendered_prompt.txt
